[gd_scene load_steps=7 format=3 uid="uid://cof1cf5gtmex"]

[ext_resource type="Script" path="res://movement.gd" id="1_fmirg"]
[ext_resource type="PackedScene" uid="uid://dhhhc0afvu644" path="res://hp.tscn" id="2_cschx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q2c65"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tis65"]

[sub_resource type="BoxMesh" id="BoxMesh_1l5e2"]
size = Vector3(0.05, 0.05, 0.3)

[sub_resource type="PrismMesh" id="PrismMesh_0jl51"]
size = Vector3(0.15, 0.1, 0.05)

[node name="character" type="CharacterBody3D"]
script = ExtResource("1_fmirg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_q2c65")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_tis65")

[node name="fpv" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.997934, -0.0642537, 0, 0.0642537, 0.997934, 0, 0, 0)
current = true

[node name="HP" parent="." instance=ExtResource("2_cschx")]

[node name="SpreadAims" type="Node" parent="."]

[node name="Aim1" type="Node3D" parent="SpreadAims"]
transform = Transform3D(0.999998, 0, 0.00174533, 0, 1, 0, -0.00174533, 0, 0.999998, 0, 0.01, 0.01)

[node name="Aim2" type="Node3D" parent="SpreadAims"]
transform = Transform3D(0.999998, 0, -0.00174533, 0, 1, 0, 0.00174533, 0, 0.999998, 0, -0.01, -0.01)

[node name="Aim3" type="Node3D" parent="SpreadAims"]
transform = Transform3D(0.999998, -0.00174533, 0, 0.00174533, 0.999998, 0, 0, 0, 1, 0, -0.01, 0.01)

[node name="Aim4" type="Node3D" parent="SpreadAims"]
transform = Transform3D(0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 0, 0, 1, 0, 0.01, -0.01)

[node name="rotater" type="Node3D" parent="."]

[node name="objPointer" type="Node3D" parent="rotater"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08295, -1.59911)

[node name="MeshInstance3D" type="MeshInstance3D" parent="rotater/objPointer"]
mesh = SubResource("BoxMesh_1l5e2")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="rotater/objPointer"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.15)
mesh = SubResource("PrismMesh_0jl51")

[node name="shootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="onDeath" from="HP" to="." method="_on_hp_on_death"]
[connection signal="takeDmg" from="HP" to="." method="_on_hp_take_dmg"]
[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
